lb_sg.tf


resource "aws_security_group" "lb-sg" {
  name        = "lb-sg"
  vpc_id      = aws_vpc.myvpc.id
  description = "allow all traffic"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "lb-tesgSG"
  }
}
